--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="app_logo">App logo</string>
     <string name="onBoarding_image">onBoarding image</string>
+    <string name="finish">Finish</string>
 </resources>
