--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="app_name">BorutoApp</string>
     <string name="app_logo">App logo</string>
     <string name="onBoarding_image">onBoarding image</string>
     <string name="finish">Finish</string>
+    <string name="search_icon">Search Icon</string>
+    <string name="star_path">M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z</string>
 </resources>
