--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="search_icon">Search Icon</string>
     <string name="star_path">M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z</string>
     <string name="hero_image">Hero Image</string>
+    <string name="network_error_icon">Network Error Icon</string>
 </resources>
